# shine

./: .gitignore  setup.cfg  shine.service
example/: config.py
example/mirrors/: example.py
example/plugins/: concurrent.py  load.py  mirrorz.py  shine_web.py  tunasync.py
shine/: __main__.py  command.py  daemon.py  eventmgr.py  scheduler.py  task.py
shine/helpers/: __init__.py  cron.py  demo.py  earliest.py  exit0.py  interval.py  rsync.py  system.py
