[metadata]
name = shine-mirrors
version = 0.0.0
description = A task scheduler for mirrors
long_description = file: README.md
long_description_content_type = text/markdown
author = TechCiel
author_email = shine@ciel.dev
license = AGPL-3.0
url = https://ciel.dev/shine/
project_urls =
    Source Code = https://github.com/JLULUG/shine/tree/core
    Issue Tracker = https://github.com/JLULUG/shine/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Environment :: Plugins
    Framework :: AsyncIO
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU Affero General Public License v3
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.9
    Topic :: System :: Archiving :: Mirroring
    Topic :: System :: Installation/Setup
    Topic :: System :: Systems Administration
    Typing :: Typed

[options]
packages =
    shine
    shine.helpers
include_package_data = True
python_requires = >= 3.9
zip_safe = False

[options.package_data]
* =
    py.typed

[options.entry_points]
console_scripts =
    shined = shine.daemon:main
    shine = shine.__main__:main

[mypy]
files = shine
python_version = 3.9
strict = True
implicit_reexport = True

[pylint.MASTER]
py-version = 3.9
disable = W1203, C0114, C0115, C0116

[pylint.BASIC]
good-names-rgxs = [a-z][a-z0-9]?$
function-rgx = _?([a-z][a-z0-9_]*|[A-Z][A-Za-z0-9_]*)$

[pylint.FORMAT]
expected-line-ending-format = LF

[pylint.STRING]
check-quote-consistency = yes

[pylint.LOGGING]
logging-format-style = new
